# HermesHub

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
scripts/: download-faster-whisper-model.sh  download-models.sh  download-sherpa-test-model.sh  install-device-command.sh  install-laptop-command.sh  install-parakeet.sh  install-system-deps-ubuntu.sh  install-systemd-user.sh  install.sh
src/hermeshub/: agent.py  assistant.py  audio.py  camera.py  cli.py  clock.py  config.py  doctor.py  listen_test.py  sherpa_test.py  sound.py  stt.py  tts.py  wake.py  wake_test.py
systemd/: hermeshub.service
tests/: test_agent.py  test_clock.py  test_config.py  test_sherpa_test.py  test_sound.py  test_stt.py  test_tts.py  test_wake.py
